# rail_ledger

./: ENV_SETUP.md  README.md  drizzle.config.ts  package-lock.json  package.json  understand_of_project.md
Documents/sih/rail_ledger/: ENV_SETUP.md  package-lock.json  package.json  seed-data.sql
ai/: x.py
ai/data/: batches.csv  users.csv  vendors.csv
app/sih/: pubspec.yaml
app/sih/lib/: batch_screen.dart  batchtestor.dart  csv_storage.dart  db.dart  fetch_batches.dart  home.dart  insertion.dart  inspector.dart  ledger.dart  login.dart  main.dart  public_reports_screen.dart  publicreport.dart  qr_public.dart  qrcode.dart  sync.dart  testor.dart
db/design/: database_schema.csv
sih_submission/: 00_summary.md  01_detailed_solution.md  qr_spec.md
src/: app.css
src/lib/: db.ts  eventLog.ts  hooks.server.ts  metrics.ts  types.ts  utils.ts
src/lib/components/: Chart.svelte  DataTable.svelte  Icon.svelte  IndiaMap.svelte  Modal.svelte
src/lib/services/: aiService.ts
src/routes/: +page.svelte
src/routes/AI-Reports/: +page.svelte
src/routes/admin-dashboard/: +layout.svelte  +page.svelte
src/routes/inspector-dashboard/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
src/routes/viewer-dashboard/: +layout.svelte  +page.svelte
static/: india.topo.json
svelte_rail_ledger/: README.md  drizzle.config.ts  package-lock.json  package.json
tui/: Cargo.toml  PLAN.md  README.md
tui/src/: api.rs  app.rs  config.rs  main.rs  models.rs
tui/src/ui/: batches.rs  mod.rs  overview.rs  qr.rs  reports.rs  system.rs  tickets.rs  users.rs  vendors.rs
(+116 files in other folders)
