[package]
name = "rail_ledger_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
thiserror = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
